public/editor/editor.css
* {
    background: black;
    color: pink;
    font-family: 'VT323', monospace;
    margin: 0px;
    padding: 0px;
}


body {
    float: left;
    text-align: left;
    width: 15%;
    margin-left: 10%;
    margin-top: 80px;
}

h1 {
    padding: 16px;
    font-size: 40px;
    margin-bottom: 20px;
/*     border-bottom: 4px solid #a6a7cf; */
}

h1:hover {
    background: #090912;
    padding: 15px;
    border: 1px solid pink;
    color: white;
    cursor: pointer;
}

li {
    color: white;
    text-align: left;
    list-style-type: none;
    font-size: 40px;
    padding-bottom: 10px;
}

/* GRIDS */
/* https://www.w3schools.com/css/tryit.asp?filename=trycss_grid */

#box2 {
    position: absolute;
    left: 20%;
    top: 16%;
    width: 60%;
}

.grid-container {
    border: 1px dashed pink;
    border-right: none;
    display: grid;
    grid-template-columns: repeat(9, auto);
  }

  .grid-item {
    padding: 15px;
    border-right: 1px dashed pink;
    font-size: 30px;
    text-align: center;
  }

  .grid-item:hover {
    background: #090912;
    padding: 15px;
    color: white;
    cursor: pointer;
    padding: 14px 14px 16px 16px;
  }

  #page {
    padding: 5%;
    border: 1px dashed pink;
    border-top: none;
    height: 40%;
    border-left: none;
    border-right: none;
}

  #entry, #outry, #cursor, #placeholder {
    padding: none;
    margin: none;
    display: inline;
    font-family: 'Inconsolata', monospace;
    font-size: 25px;
    line-height: 35px;
    color: white;
  }

  #outry {
    /* This is the magic number that fixes the "." that is used to make sure
    spaces are recognized. */
    margin-left: -6px;
  }

  #placeholder {
      font-weight: 500px;
      color: rgb(41, 46, 53);
  }

  #phantom {
      position: absolute;
      outline-style: none;
      z-index: -999;
  }

  #cursor-wrap {
    display: inline;
    color: black;
  }

  #cursor {
      font-size: 30px;
      margin-left: -12px;
      margin-top: -1px;
      visibility: hidden;
      display: none;
      position: absolute;
      padding: 0px;
      font-weight: 1000;
      color: rgb(113, 148, 201);
      background: none;
      z-index: 999;
  }

  #test {
      display: block;
  }

a {
    padding: 2px 8px 6px 8px;
    color: pink;
    background:#090912;
    font-size: 30px;
    font-family: 'VT323', monospace;
    font-weight: 700;
    text-decoration: none;
}

a:hover {
    border: 1px solid pink;
    padding: 1px 7px 5px 7px;
    color: white;
}

.test, .test:hover {
    background: pink;
    color: black;
}

/* add the class period back to this to activate it. Not currently active. */
noselect {
    -webkit-touch-callout: none; /* iOS Safari */
      -webkit-user-select: none; /* Safari */
       -khtml-user-select: none; /* Konqueror HTML */
         -moz-user-select: none; /* Old versions of Firefox */
          -ms-user-select: none; /* Internet Explorer/Edge */
              user-select: none; /* Non-prefixed version, currently
                                    supported by Chrome, Edge, Opera and Firefox */
}





/* Test stuff. You can delete this */

.ablock {
    display: block
}

#en, #ex, #curse {
    display: inline;
    font-size: 25px;
}

#ex {

}

#curse {

}

